--- a/course-project/src/index.css
+++ b/course-project/src/index.css
@@ -1,5 +1,9 @@
 @import url('./assets/css/font-awesome.min.css');
 
+.dummy {
+  background-color: #6a11cb;
+}
+
 .icon-background {
   background: rgb(151, 68, 240);
   background: radial-gradient(
