--- a/mf-quick-book/HomePageApp/src/components/QuickBooking/QuickBooking.scss
+++ b/mf-quick-book/HomePageApp/src/components/QuickBooking/QuickBooking.scss
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap');
+/*@import url('https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap');*/
 
 .quick-booking-container {
   background: #3f51b5;
@@ -11,7 +11,7 @@
     color: white;
   }
 
-  .header{    
+  .header {    
     color: white;
     font-size: x-large;
     font-family: 'Permanent Marker', cursive;
