--- a/mf-quick-book/MovieApp/src/App.scss
+++ b/mf-quick-book/MovieApp/src/App.scss
@@ -1,3 +1,13 @@
+@font-face {
+  font-family: Lobster;
+  src: url(assets/fonts/Lobster/Lobster-Regular.ttf);
+}
+
+@font-face {
+  font-family: Permanent Marker;
+  src: url(assets/fonts/Permanent_Marker/PermanentMarker-Regular.ttf);
+}
+
 .App {
   height: 100vh;  
 }
